--- a/Overfitting biaised and unbiaised variance.ipynb
+++ b/Overfitting biaised and unbiaised variance.ipynb
@@ -328,6 +328,7 @@
     "np.random.seed(10)\n",
     "mean_original=0\n",
     "var_original=1\n",
+    "std_original=1\n",
     "\n",
     "#Creates the x axis 120 values between -3 and 3.\n",
     "x_values = np.linspace(-3, 3, 120)\n",
