--- a/Overfitting biaised and unbiaised variance.ipynb
+++ b/Overfitting biaised and unbiaised variance.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "3°) We find the parameter values that maximize the likelihood function.\n",
     "\n",
-    "4°) We show that the variance est biased "
+    "4°) We show that the variance is biased because the expectation of the variance estimator does not lead to $\\sigma^2$"
    ]
   },
   {
